--- a/index.htm
+++ b/index.htm
@@ -124,7 +124,7 @@
           <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
         </header>
 
-        <marquee>updated 29/09/2020 21:45PM</marquee>
+        <marquee>updated 29/09/2020</marquee>
 
         <script>
           function openNav() {
