--- a/2SE.htm
+++ b/2SE.htm
@@ -4,12 +4,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="responsive.css">
-  <title></title>
-  <style media="screen">
-    #coll{
-      border: none;
-    }
-  </style>
+  <title>SE</title>
+
 </head>
 
 <body>
@@ -33,85 +29,73 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee></marquee>
-  <h1></h1>
+  <marquee>DATA AS IN YOUTUBE. ANY QUERY PLEASE CONTACT US.</marquee>
+  <h1>Software Engineering (SE)</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
     <tr>
       <td>M1 L1</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Software Engineering, Ethics of softwre engineering, attributes of Software Engineering, application of SE.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Riuv_vt2mrI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L2.1</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td> L2.2</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M1 L2</td>
+      <td>Software engineering concepts are use in embedded system, information system etc. with the help of some casestudies.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/S4n2NZ_qIKc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L3</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Software process, types of software process models- water fall models , incremental model and spiral models.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qDpRt7VipPE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M1 L3</td>
+      <td>Requirements Specification ,natural language specification,structured specification,Requirement elicitation and analysis.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/0ETYNAdtfGA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L4</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Activites of SE, specifiction, requirement engineering process, Design and implementation, sofware verification, software evolution.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/45fJoXL3AuY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L5</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Requirements definition , user requirements, system requirements,functional requirements and non functional requirements.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/6tFNaG2t3SU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L6</td>
-      <td> </td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L7.1</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M1 L7.2</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M1 L7</td>
+      <td> Requirements elicitation and analysis,requirment discovery, interview, enthnograpy , requirement validation , requirement mangement</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/TEVzGB7gEh4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L1</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>DEFINITION ON OBJECT ORIENTATION, DEVELOPMENT, OBJECT ORIENTED MODELING OBJECT ORIENTED METHODLOGY AND STAGES OF METHODLOGY.
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/51f7lK8OSiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L1</td>
+      <td>THREE MODEL , CLASS DIAGRAM,STATE DIAGRAM,SEQUENCE DIAGRAM, OO THEMES.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GOHYUhVRwVQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L2</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td> Modeling, models server serveral pupose
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/XNn1_tQUV3c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L3</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L4.1</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L4.2</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td>M2 L5</td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M2 L2</td>
+      <td>Class model ,state model, interaction model,three model
+    </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7G38UVP8DdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 
