--- a/DS.htm
+++ b/DS.htm
@@ -12,7 +12,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="#">News</a>
+    <a href="2SEMINDEX.htm">2 SEM CS</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -29,7 +29,7 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee>updated 29/09/2020 21:45PM</marquee>
+  <marquee>updated 03/10/2020 </marquee>
   <h1>Data Structure (DS).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
