--- a/2SE.htm
+++ b/2SE.htm
@@ -12,7 +12,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="#">News</a>
+    <a href="2SEMINDEX.htm">2 SEM CS</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -30,7 +30,7 @@
   </header>
 
   <marquee>DATA AS IN YOUTUBE. ANY QUERY PLEASE CONTACT US.</marquee>
-  <h1>Software Engineering (SE)</h1>
+  <h1>Software Engineering (SE).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
