--- a/2MAT.htm
+++ b/2MAT.htm
@@ -5,18 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="responsive.css">
   <title></title>
-  <style media="screen">
-    #coll{
-      border: none;
-    }
-  </style>
 </head>
 
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="#">News</a>
+    <a href="2SEMINDEX.htm">2 SEM CS</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -39,77 +34,77 @@
 
   <table>
     <tr>
-      <td>M1 L1</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L2.1</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td> L2.2</td>
+      <td> </td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L3</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L4</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L5</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L6</td>
+      <td></td>
       <td> </td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L7.1</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M1 L7.2</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L1</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L2</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L3</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L4.1</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L4.2</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L5</td>
+      <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
