--- a/index.htm
+++ b/index.htm
@@ -117,7 +117,7 @@
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
-          <a href="2SEMINDEX.htm">2 SEM CS</a>
+          <a href="2CSE.htm">2 SEM CS</a>
           <a href="CONTACT.htm">Contact</a>
         </div>
         <header>
@@ -165,47 +165,21 @@
         <table>
           <tr>
             <th>SR NO</th>
-            <th>SUBJECT</th>
+            <th>BRANCH</th>
           </tr>
           <tr>
             <td>1.</td>
-            <td><a href="ME.htm">Management and Entreprenuer for IT Industry (ME)</a></td>
+            <td><a href="5CSE.htm">5 SEM CSE.</a></td>
           </tr>
           <tr>
             <td>2.</td>
-            <td><a href="CNS.htm">Computer Network and Security</a></td>
+            <td><a href="2CSE.htm">3 SEM CSE.</a></td>
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="DBMS.htm">Database Management System</a></td>
+            <td><a href="#">3 SEM ECE.</a></td>
           </tr>
-          <tr>
-            <td>4.</td>
-            <td><a href="ATC.htm">Automata theory and computablilty</a></td>
-          </tr>
-          <tr>
-            <td>5.</td>
-            <td><a href="ADP.htm">Application development using python</a></td>
 
-          </tr>
-          <tr>
-            <td>6.</td>
-            <td><a href="UP.htm">Unix programming</a></td>
-          </tr>
-          <tr>
-            <td>7.</td>
-            <td><a href="CNL.htm">Computer network laboratory</a></td>
-
-          </tr>
-          <tr>
-            <td>8.</td>
-            <td><a href="DBMSL.htm">DBMS laboratory</a></td>
-          </tr>
-          <tr>
-            <td>9.</td>
-            <td><a href="RPA.htm">RPA</a></td>
-          </tr>
-        </table>
         <footer>
           <span style="text-align:left;"> External Links.</span>
           <div style="text-align:center;">
