--- a/2DSL.htm
+++ b/2DSL.htm
@@ -11,7 +11,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="2SEMINDEX.htm">2 SEM CS</a>
+    <a href="2CSE.htm">2 SEM CS</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
