--- a/index.htm
+++ b/index.htm
@@ -181,7 +181,7 @@
           </tr>
 
 
-          <div style="text-align:center;">
+          <div>
             <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" />
           </div>
        
