--- a/index.htm
+++ b/index.htm
@@ -180,11 +180,13 @@
             <td><a href="#">3 SEM ECE.</a></td>
           </tr>
 
-
-          <div>
+        </table>
+        <footer>
+          <span style="text-align:left;"> External Links.</span>
+          <div style="text-align:center;">
             <img src="https://hitwebcounter.com/counter/counter.php?page=7672346&style=0005&nbdigits=4&type=page&initCount=50" title="Total Website Hits" Alt="Web Hits" border="0" />
           </div>
-       
+        </footer>
 </body>
 
 </html>
