--- a/5CSE.htm
+++ b/5CSE.htm
@@ -118,6 +118,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
           <a href="2CSE.htm">2 SEM CS</a>
+          <a href="5CSE.htm">5 SEM cs</a>
           <a href="CONTACT.htm">Contact</a>
         </div>
         <header>
@@ -136,32 +137,6 @@
           }
         </script>
 
-        <script type="text/javascript">
-          document.write("<center><font size=+3 style='color: black;'>");
-          var day = new Date();
-          var hr = day.getHours();
-          if (hr >= 0 && hr < 12) {
-            document.write("Good Morning!");
-          } else if (hr == 12) {
-            document.write("Good Noon!");
-          } else if (hr >= 12 && hr <= 17) {
-            document.write("Good Afternoon!");
-          } else if (hr > 17 && hr <= 20) {
-            document.write("Good evening!");
-          } else {
-            document.write("Good night!");
-          }
-          document.write("</font></center>");
-        </script>
-
-        <table>
-          <tr>
-            <td style="border:none;">
-              <h2>WELCOME TO YOUTUBE LEARNING</h2>
-            </td>
-            <td style="border:none;"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
-          </tr>
-        </table>
         <table>
           <tr>
             <th>SR NO</th>
