--- a/index.htm
+++ b/index.htm
@@ -118,7 +118,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
           <a href="2CSE.htm">2 SEM CS</a>
-          <a href="5CSE.htm">5 SEM cs</a>
+          <a href="5CSE.htm">5 SEM CS</a>
           <a href="CONTACT.htm">Contact</a>
         </div>
         <header>
