--- a/5CSE.htm
+++ b/5CSE.htm
@@ -118,15 +118,15 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="index.htm">Home</a>
           <a href="2CSE.htm">2 SEM CS</a>
-          <a href="5CSE.htm">5 SEM cs</a>
+          <a href="5CSE.htm">5 SEM CS</a>
           <a href="CONTACT.htm">Contact</a>
         </div>
         <header>
           <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
         </header>
-
+         <br>
         <marquee>updated 29/09/2020</marquee>
-
+          <br>
         <script>
           function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
