--- a/2CSE.htm
+++ b/2CSE.htm
@@ -143,7 +143,7 @@
           </tr>
           <tr>
             <td>1.</td>
-            <td><a href="2MAT.htm">Engineering Mathematics-3 (MAT)</a></td>
+            <td><a href="2MAT.htm">Engineering Mathematics-3 (MAT).</a></td>
           </tr>
           <tr>
             <td>2.</td>
