--- a/2MAT.htm
+++ b/2MAT.htm
@@ -11,7 +11,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="2CSE.htm">2 SEM CS</a>
+    <a href="3CSE.htm">2 SEM CS</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -29,7 +29,7 @@
   </header>
 
   <marquee></marquee>
-  <h1></h1>
+  <h1>Engineering Mathematics-3 (MAT).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
