--- a/ME.htm
+++ b/ME.htm
@@ -4,26 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ME </title>
-
-<style>
-body{
-  background-image: url('https://previews.123rf.com/images/elen1/elen11702/elen1170200030/71328049-circuit-board-electronic-computer-hardware-technology-motherboard-digital-chip-tech-science-backgrou.jpg');
-  background-size: 100% 100%   ;
-    background-repeat: no-repeat;
-}
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 10px;
-}
-
-table th {
-  background-color: #7DFDFE;
-  color:black;
-}
-</style>
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   <h1>Management and Entreprenuer for IT Industry (ME)</h1>
