--- a/CNS.htm
+++ b/CNS.htm
@@ -11,11 +11,27 @@
   <h1>Computer Network and Security(CNS)</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
-    <tr>
-      <th>SR NO</th>
-      <th>TOPIC</th>
-      <th>VIDEO LECTURE</th>
-    </tr>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="index.htm">Home</a>
+      <a href="2CSE.htm">2 SEM CS</a>
+      <a href="CONTACT.htm">Contact</a>
+    </div>
+    <script>
+      function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+      }
+  
+      function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+      }
+    </script>
+  
+    <header>
+      <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
+    </header>
+  
+    <marquee>updated 03/10/2020 </marquee>
     <tr>
       <td></td>
       <td>Introduction</td>
