--- a/ADP.htm
+++ b/ADP.htm
@@ -8,8 +8,6 @@
 </head>
 
 <body>
-  <h1>Application development using Python</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
@@ -30,7 +28,13 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
+   <br>
   <marquee>updated 03/10/2020 </marquee>
+  <br>
+
+  <h1>Application development using Python (ADP).</h1>
+  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
+
   <table>
     <tr>
       <td></td>
@@ -42,87 +46,87 @@
       <td>Basics of python programming: Pythons IDLE (Integrated Development and
 Learning Environment), Expressions, Basic arithmetic operators, Data types, Programming examples and Demonstrations.
 </td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/tUAeEZ0K0NY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/tUAeEZ0K0NY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L2</td>
       <td>Basic string operations, Defining variables,
 Variable naming rules, comments, Programming examples and Demonstrations</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/LPcQ3vmfID8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/LPcQ3vmfID8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L3</td>
       <td>Input and Output functions, Data types, Type conversion functions, string length method,
 Python program development, Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/2PSWjFO2gRs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/2PSWjFO2gRs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L4</td>
       <td>Boolean values, comparison and Boolean operators and how to use these operators in a conditional  expression with suitable Programming examples and Demonstrations</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/eoQlvr6QdL8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/eoQlvr6QdL8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L6</td>
       <td>Importing Modules, and Ending a Program Early with  sys.exit() function with suitable Programming examples and Demonstrations</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5HXhGOr_8nA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/5HXhGOr_8nA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L7</td>
       <td>Functions, Definition and Parameters, Function Execution, Advantages, Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L8</td>
       <td>Functions, Definition and return values,  None datatype, Keyword parameters, Programming examples
 and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/uSliWYDjFqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/uSliWYDjFqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L9</td>
       <td> Functions and variable scope, Scope rules, Elements of exception handling, Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/VV14IR_j8qk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/VV14IR_j8qk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M2 L1</td>
       <td>List Data types, List definition, List access with indexing (Postive/negative), List traversal with for statement, List slices and slice operator (:), Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/WJPmzuAiDZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/WJPmzuAiDZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L2</td>
       <td>Operations and Methods, Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/MGGRuGRku-E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/MGGRuGRku-E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L3</td>
       <td>Python Mutable and immutable data types, tuples, tuple assignment, advanced data type converting functions, references, passing references to functions, copy and deepcopy functions of copy module, Programming examples and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/UfodigUdCp8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/UfodigUdCp8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L4</td>
       <td>Dictionary Data types, Dictionary definition, Key-Value pairs, Dictionary data access, Dictionary
 traversal with for statement, List vs. Dictionary, Programming examples and Demonstrations.
 </td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/t7BsOGnlXAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/t7BsOGnlXAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L5</td>
       <td>Dictionary methods, keys(), values(), items(), get(), setdefault, pprint module, checking key/value
 with in operator, Frequency counter problem, Programming examples and Demonstrations.
 </td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/7TAgHZUIZtA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7TAgHZUIZtA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L6</td>
       <td>Nested lists, Nesting of dictionaries, Modeling of real world things, Tic-Tac-Toe board model,
 Chessboard model and Demonstrations.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jLEtxsjT88M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/jLEtxsjT88M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 
