--- a/ME.htm
+++ b/ME.htm
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
-  <h1>Management and Entreprenuer for IT Industry (ME)</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
     <div id="mySidenav" class="sidenav">
@@ -30,47 +28,52 @@
     <header>
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
-  
-    <marquee>updated 03/10/2020 </marquee>
+    <br>
+    <marquee>updated 03/10/2020</marquee>
+    <br>
+
+    <h1>Management and Entreprenuer for IT Industry (ME).</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch.</p>
+
     <tr>
       <td>M1 L1</td>
       <td>Nature of Management, Characteristics of Management, Functions of Management,<br> Scope of Management concepts are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/5bROam5Epy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/5bROam5Epy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
       <td> Goals of Management, Levels of Management, Skills of Manager,<br> Evolution of Management are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/9u-JnWo5NDg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/9u-JnWo5NDg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L3</td>
       <td>Evolution of Management concept, Early management approaches like Scientific management,<br> Administrative management, Bureaucracy, Neo classical approaches like Human relations movement</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Qtxc_fFJH7w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Qtxc_fFJH7w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L5</td>
       <td>Planning- Nature, Importance, Types of Plans.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/z0LGbr__VmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/z0LGbr__VmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L6</td>
       <td> Planning, Organization, Characteristics of Organization, Nature of Organization, Purpose of Organization are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fravUp2eLOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/fravUp2eLOc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L7</td>
       <td>Types of Organization: Formal organization,Informal organization, Line organization, Functional organization,  Line & Staff organization, Committee organization are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Vzh0b6_H6xg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Vzh0b6_H6xg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L8</td>
       <td>Staffing, Importance of Staffing, Recruitment's, Steps in Selection Procedure are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/E8FcUoV0yqs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/E8FcUoV0yqs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L1</td>
       <td>Meaning and nature of directing, principles of directing, elements of directing are discussed.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/uXYH7iIogYY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/uXYH7iIogYY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
   <p><strong>Note:</strong>L4 video is not there from L3 to L5 continuation(As advised by mam.)</p>
