--- a/ATC.htm
+++ b/ATC.htm
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-  <h1>Automata theory and computability(ATC).</h1>
-  <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
   <table>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -33,87 +31,95 @@
     </header>
   
     <marquee>updated 03/10/2020 </marquee>
+
+    <br>
+
+    <h1>Automata theory and computability (ATC).</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch.</p>
+
+    <br>
+
     <tr>
       <td>M1 L1</td>
       <td>Introduction to Automata Theory and computability, <br>applications of ATC, concepts of strings and Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/HqXa9v1IuMc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/HqXa9v1IuMc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
       <td>Introduction to Finite State Machines, <br>Working of a computation machines in general, Rules for designing valid DFSMs .</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/qlFOb2wzZ38" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qlFOb2wzZ38" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L3</td>
       <td>Designing DFSMs for Regular Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/iOQNvX77BVc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/iOQNvX77BVc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L4</td>
       <td>Designing DFSMs for Regular Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/CVLnEALPoAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/CVLnEALPoAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L5</td>
       <td>Designing DFSMs for Regular Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/X7QtSUzHxdQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/X7QtSUzHxdQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L6</td>
       <td>Designing NDFSMs for Regular Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EcDf1PrhbDM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/EcDf1PrhbDM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L7</td>
       <td>Designing NDFSMs for Regular Languages.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/R4IXgl51-Cw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/R4IXgl51-Cw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L8</td>
       <td>Converting NDFSM (NFA) to DFSM (DFA).</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/XXEsjdtnDpU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/XXEsjdtnDpU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L9</td>
       <td>Converting NDFSM (NFA) to DFSM (DFA).</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ELSl-Ra_lpM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ELSl-Ra_lpM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L10</td>
       <td>Minimizing DFSM.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/1tKCHxYNVHM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/1tKCHxYNVHM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L1</td>
       <td> Regular Expressions (RE): what is a RE?</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/dKBpk4W94dg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/dKBpk4W94dg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L2.1</td>
       <td>Kleene’s theorem, Conversion from Regular Expressions to FSM</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/fHgGPP1xVmM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/fHgGPP1xVmM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L2.2</td>
       <td>Kleene’s theorem, Conversion from FSM to Regular Expressions, Applications of REs.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/EWDhL0QqNW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/EWDhL0QqNW8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L3</td>
       <td>Manipulating and Simplifying Regular Expressions</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/hQT8vdjqJug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/hQT8vdjqJug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L4.1</td>
       <td>Regular Grammar/ Right linear grammars, Regular grammar to FSM</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/nsx8uQwxr8Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/nsx8uQwxr8Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L4.2</td>
       <td>FSM to Regular Grammar, Satisfying Multiple Criteria</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/Vrz_m90nlck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Vrz_m90nlck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
