--- a/UP.htm
+++ b/UP.htm
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h1>Unix Programming</h1>
-    <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
+
   <table>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -31,50 +30,56 @@
     <header>
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
-  
+
+    <br>
     <marquee>updated 03/10/2020 </marquee>
+    <br>
+
+    <h1>Unix Programming (UP).</h1>
+    <p><strong>NOTE:</strong> Make the video full screen and do watch.</p>
+
     <tr>
       <td>M1 L1</td>
       <td>UNIX ARCHITECTURE, FEATURES, ENVIRONMENTS and POSIX standards.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/jvwq9_mzafs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
       <td>Command structure,types of command and basic UNIX command standards.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/oH3j9FoDuqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/oH3j9FoDuqA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L3</td>
       <td> Combining commands, root login, su, concept of files.
 </td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/yjTBiAViPW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/yjTBiAViPW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
     <tr>
       <td>M1 L4</td>
       <td>Command structure, types of command and basic unix command standards.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/AXNWnK3yHB4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L5</td>
       <td>directory commands, mkdir, rmdir, cd, pwd.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/GbN8jG6aFI4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GbN8jG6aFI4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L6</td>
       <td>File related commands such as cp, mv, rm, od and cat.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/X6O3CciyzTQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/X6O3CciyzTQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L1</td>
       <td>ls command with different options, ls -l and ls -d command, listing file attributes.</td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/8C_C2KEuMyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/8C_C2KEuMyg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M2 L2</td>
       <td>Different file categories or ownership of a file, different file permissions for a file, changing file permission using relative, absolute and recursive manner.
 </td>
-      <td><iframe width="150" height="150" src="https://www.youtube.com/embed/ptxF9Fmg3k8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ptxF9Fmg3k8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
