--- a/CNS.htm
+++ b/CNS.htm
@@ -43,12 +43,12 @@
     </tr>
     <tr>
       <td>M1 L1</td>
-      <td>Principles of Network Applications <br> Network Application Architectures <br> Processes Communicating <br></td>
+      <td>Principles of Network Applications  Network Application Architectures Processes Communicating </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/iYaykov_X4I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L2</td>
-      <td>Overview of HTTP <br> Non-Persistent and Persistent <br> Connections HTTP Message Format</td>
+      <td>Overview of HTTP  Non-Persistent and Persistent  Connections HTTP Message Format</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/2hnbiMLQ7_k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
 
     </tr>
@@ -80,7 +80,7 @@
     </tr>
     <tr>
       <td>M1 L8</td>
-      <td>Update stage of POP3 - Download and delete mode,download and keep mode with an example; <br> Mail access protocol- IMAP with an example & Web based email. </td>
+      <td>Update stage of POP3 - Download and delete mode,download and keep mode with an example;  Mail access protocol- IMAP with an example & Web based email. </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Q6gusYnIVcg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
