--- a/CNS.htm
+++ b/CNS.htm
@@ -30,7 +30,7 @@
     </header>
     <br>
 
-    <marquee>updated 03/10/2020 </marquee>
+    <marquee>updated 04/10/2020 </marquee>
     <br>
     <h1>Computer Network and Security(CNS)</h1>
     <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
@@ -142,6 +142,16 @@
       <td>M2 L2</td>
       <td>Transport layer service analogy, difference between Transport and network layer.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/2dx9zfzt3V8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Multiplexing and demultiplexing analogy with detailed description.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/kN-bWoqhv6E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>UDP Multiplexing and demultiplexing analogy with detailed description.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/57UJVcziI6Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
