--- a/ADP.htm
+++ b/ADP.htm
@@ -29,7 +29,7 @@
   </header>
 
    <br>
-  <marquee>updated 03/10/2020 </marquee>
+  <marquee>updated 09/10/2020 </marquee>
   <br>
 
   <h1>Application development using Python (ADP).</h1>
@@ -132,6 +132,18 @@ Chessboard model and Demonstrations.</td>
       <td>M2 L7</td>
       <td>Functions, Definition and Parameters, Function Execution, Advantages, Programming examples and Demonstrations.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/im5SK9zwjCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L8</td>
+      <td>Functions, Definition and return values, None datatype, Keyword parameters, Programming examples 
+        and Demonstrations.
+      </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/uSliWYDjFqM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L9</td>
+      <td>Strings, Manipulation strings, Decorating strings, pyperclip module, Programming examples and Demonstrations.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/oS7UjRsHXhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 
