--- a/ME.htm
+++ b/ME.htm
@@ -29,7 +29,7 @@
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
     <br>
-    <marquee>updated 03/10/2020</marquee>
+    <marquee>updated 09/10/2020</marquee>
     <br>
 
     <h1>Management and Entreprenuer for IT Industry (ME).</h1>
@@ -74,6 +74,26 @@
       <td>M2 L1</td>
       <td>Meaning and nature of directing, principles of directing, elements of directing are discussed.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/uXYH7iIogYY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td>leadership meaning, importance of leadership and leadership styles are discussed.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/R_aER6taRv8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Motivation, Motivation Theories like Maslow’s Need Hierarchy Theory, Hertzberg’s Two Factors Theory, McClelland’s Need Theory, Victor Vroom’s Expectancy Theory, Adam’s Equity Theory, Skinner’s Behaviour Modification Theory are discussed.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/IuemtlJYEwM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>Communication: Meaning and Importance is discussed.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/X86xjmYJkVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Coordination- Meaning and Importance, Techniques of Coordination</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/nTucKCR6zu4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
   <p><strong>Note:</strong>L4 video is not there from L3 to L5 continuation(As advised by mam.)</p>
