--- a/CNS.htm
+++ b/CNS.htm
@@ -153,6 +153,43 @@
       <td>UDP Multiplexing and demultiplexing analogy with detailed description.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/57UJVcziI6Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>RDT  mechanisms and methods invoked at sender and receiver side.
+      </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/1WMwvd2HMwI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td>RDT 1.0 sender FSM ,receiver FSM, no error & data loss.
+      </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GE6Z9tNTRiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L7</td>
+      <td>RDT 2.0 sender FSM ,receiver FSM, checksum to detect error.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/IoKhb_Wx4wA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L8</td>
+      <td>RDT 2.0 flaws, RDT 2.1 sender FSM , sequence number to ensure ordered delivery of data.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xHFhvPEf2YU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L9</td>
+      <td>RDT 2.1 receiver FSM , sequence number to ensure ordered delivery of data, RDT 2.2 basics</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/pUWhTfXRPRo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L10</td>
+      <td>RDT 2.2 sender FSM and receiver FSM.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/svMNFEgVekc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L11</td>
+      <td>RDT 3.0 sender and receiver FSM with timer mechanism.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/NjnauYK43JM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
