--- a/ATC.htm
+++ b/ATC.htm
@@ -31,7 +31,7 @@
     </header>
     <br>
 
-    <marquee>updated 03/10/2020 </marquee>
+    <marquee>updated 09/10/2020 </marquee>
 
     <br>
 
@@ -121,6 +121,17 @@
       <td>FSM to Regular Grammar, Satisfying Multiple Criteria</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Vrz_m90nlck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Regular and Non-Regular Languages, Closure Properties of Regular Languages</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ZfZ8K_qCIZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    
   </table>
 </body>
 
